--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,8 +1,14 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
   max-width: 880px;
   margin: 0 auto;
   padding: 45px 0 35.5px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
 }
 
 @media screen and (max-width: 925px) {
