--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,5 +1,6 @@
 .popup__container {
   position: relative;
+  text-align: center;
   background-color: #FFF;
   box-shadow: 0 0 25px rgba(0, 0, 0, .15);
   border-radius: 10px;
