--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 @import url("./blocks/page/page.css");
 @import url("./blocks/header/header.css");
 @import url("./blocks/header/__logo/header__logo.css");
+@import url("./blocks/header/__info/header__info.css");
+@import url("./blocks/header/__link/header__link.css");
+@import url("./blocks/header/__link/_out/header__link-out.css");
 /*profile*/
 @import url("./blocks/profile/profile.css");
 @import url("./blocks/profile/__avatar/profile__avatar.css");
@@ -45,3 +48,16 @@
 @import url("./blocks/popup/__image/popup__image.css");
 @import url("./blocks/popup/__error/popup__error.css");
 @import url("./blocks/popup/__error/_active/popup__error_active.css");
+@import url("./blocks/popup/__title/_tooltip/popup__title_tooltip.css");
+@import url("./blocks/popup/__hint-icon/popup__hint-icon.css");
+/*auth*/
+@import url("./blocks/auth/auth.css");
+@import url("./blocks/auth/__error/auth__error.css");
+@import url("./blocks/auth/__error/_active/auth__error_active.css");
+@import url("./blocks/auth/__form/auth__form.css");
+@import url("./blocks/auth/__input/auth__input.css");
+@import url("./blocks/auth/__link/auth__link.css");
+@import url("./blocks/auth/__submit-button/auth__submit-button.css");
+@import url("./blocks/auth/__title/auth__title.css");
+@import url("./blocks/auth/__yet/auth__yet.css");
+@import url("./blocks/auth/__input/_invalid/auth__input_invalid.css");
